# event-models

./: Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml
event_models/action/: action.py
event_models/available/: ticketmaster.py
event_models/event/: event.py  section.py
event_models/exchange/: exchange.py
event_models/logger/: logger.py  message.py
event_models/notification/: notification.py
event_models/trigger/enum/: __init__.py  enum.py
event_models/trigger/model/: __init__.py  model.py  result.py
event_models/trigger/template/: __init__.py  template.py
